--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
 					<li>
 					</li>
 					<li>
-						<a href="page2.html">page2 &gt;</a>
+<!-- SEO -- afin de répondre à la Check-list du point num 4 -- changement de l'URL de la page2 en un mot clef meilleur pour le référencement -->
+						<a href="parlons-web-design">Parlons web design &gt;</a>
 					</li>
 				</ul>
 			</div>
@@ -89,7 +90,8 @@
 					La chouette agence.
 				</h1>
 				<div class="text-center">
-					<a href="page2.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
+<!-- SEO -- afin de répondre à la Check-list du point num 4 -- changement de l'URL de la page2 en un mot clef meilleur pour le référencement -->
+					<a href="parlons-web-design.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
 				</div>
 			</div>
 		</div>
@@ -164,7 +166,9 @@
 					Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients .<br>
 				</h2>
 				<p class="text-center white">
-					Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche. <br><br><a class="ltc-white bold-link" href="page2.html">Contactez notre équipe</a><br>
+					Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche. <br><br>
+<!-- SEO -- afin de répondre à la Check-list du point num 4 -- changement de l'URL de la page2 en un mot clef meilleur pour le référencement -->
+                    <a class="ltc-white bold-link" href="parlons-web-design.html">Contactez notre équipe</a><br>
 				</p>
 			</div>
 		</div>
@@ -244,7 +248,8 @@
 				La chouette agence redonne vie à votre projet, <br>contactez notre équipe !
 			</h2>
 			<div class="col-sm-12 text-center">
-				<a href="page2.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
+<!-- SEO -- afin de répondre à la Check-list du point num 4 -- changement de l'URL de la page2 en un mot clef meilleur pour le référencement -->
+				<a href="parlons-web-design.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
 			</div>
 		</div>
 	</div>
