--- a/index.html
+++ b/index.html
@@ -62,14 +62,16 @@
 			</div>
 			<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 				<ul class="site-navigation nav navbar-nav">
-					<li>
+<!-- SEO -- afin de répondre à la Check-list du point num 4 --  ce lien renvoie sur la page actuelle alors le l'ai supprimé car cela ne sert a rien					
+                    <li>
 						<a href="index.html">Accueil</a>
 					</li>
 					<li>
 					</li>
+-->
 					<li>
 <!-- SEO -- afin de répondre à la Check-list du point num 4 -- changement de l'URL de la page2 en un mot clef meilleur pour le référencement -->
-						<a href="parlons-web-design">Parlons web design &gt;</a>
+						<a href="parlons-web-design.html">Parlons web design</a>
 					</li>
 				</ul>
 			</div>
