--- a/parlons-web-design.html
+++ b/parlons-web-design.html
@@ -32,7 +32,7 @@
 </head>
 <body>
 <!-- Principal conteneur -->
-<div class="page-container">
+<div class="page-container page-container2">
     
 <!-- bloc-0 -->
 <!-- SEO -- afin de répondre à la Check-list du point num 4 -- point de repère Aria pour la structure du site (HEADER)-->
@@ -40,7 +40,8 @@
 	<div class="container bloc-sm">
 		<nav class="navbar row">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png" alt="atlanta web design logo" height="40" /></a>
+<!-- SEO -- afin de répondre à la Check-list du point num 4 -- Modification du alt avec keyword dedans -->
+				<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png" alt="La chouette agence, une agence de développement web" height="40" /></a>
 <!-- SEO -- boutton non utilisé 
                     <button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span> <span class="icon-bar"></span><span class="icon-bar"></span>
@@ -51,12 +52,13 @@
 				<ul class="site-navigation nav navbar-nav">
 					<li>
 						<a href="index.html">Accueil</a>
-					</li>
+                    </li>
+<!-- SEO -- afin de répondre à la Check-list du point num 4 --  ce lien renvoie sur la page actuelle alors le l'ai supprimé car cela ne sert a rien
 					<li>
+
+						<a href="parlons-web-design.html">Parlons web design</a>
 					</li>
-					<li>
-						<a href="page2.html">page2 &gt;</a>
-					</li>
+-->
 				</ul>
 			</div>
 		</nav>
@@ -145,25 +147,26 @@
 					La chouette agence - Agence web basée à Lyon.<br>
 				</p>
 				<div class="row row-no-gutters social">
-<!-- SEO -- afin de répondre à la Check-list du point num 4 -- les liens ne renvoie plus vers la page d'accueil, mais vers des sites pertinents pour éviter le spam googlebot -->
+<!-- SEO -- afin de répondre à la Check-list du point num 4 -- les liens ne renvoie plus vers la page d'accueil, mais vers des sites pertinents pour éviter le spam googlebot avec ajout d'alt comprenant un synonyme keyword -->
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="twitter.com"><span class="fa fa-twitter icon-md"></span></a>
+							<a class="social" href="twitter.com" alt="Suivez la chouette agence sur twitter !"><span class="fa fa-twitter icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="facebook.com"><span class="fa fa-facebook icon-md"></span></a>
+							<a class="social" href="facebook.com" alt="La chouette agence est aussi sur facebook!"><span class="fa fa-facebook icon-md" ></span></a>
+						</div>
+                        
+					</div>
+					<div class="col-sm-3">
+						<div class="text-center">
+							<a class="social" href="dribble.com" alt="Plus d'infos sur la chouette agence avec dribble !"><span class="fa fa-dribbble icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="dribble.com"><span class="fa fa-dribbble icon-md"></span></a>
-						</div>
-					</div>
-					<div class="col-sm-3">
-						<div class="text-center">
-							<a class="social" href="instagram.com"><span class="fa fa-instagram icon-md"></span></a>
+							<a class="social" href="instagram.com" alt="Découvrez les réalisations de la chouette agence sur instagram !"><span class="fa fa-instagram icon-md"></span></a>
 						</div>
 					</div>
 				</div>
