--- a/parlons-web-design.html
+++ b/parlons-web-design.html
@@ -97,25 +97,25 @@
 						<label for="name">
 							Nom
 						</label>
-						<input id="name" name="name" class="form-control" required />
+						<input id="name" name="name" class="form-control" type="text" required value="ex : Jean Darmeri"/>
 					</div>
 					<div class="form-group">
 						<label for="email">
 							Adresse email
 						</label>
-						<input id="email" name="email" class="form-control bgc-textarea" type="email" required />
+						<input id="email" name="email" class="form-control bgc-textarea" type="email" required value="exemple@mail.com" />
 					</div>
 					<div class="form-group">
 						<label for="input_504">
 							Comment nous avez-vous connu ?
 						</label>
-						<input class="form-control" name="input_504" type="email" required id="input_504" />
+						<input class="form-control" name="input_504" type="text" required id="input_504" value="ex : par des amis"/>
 					</div>
 					<div class="form-group">
 						<label for="message">
 							Brief de votre projet (Ajoutez autant de détails que nécessaire)<br>
 						</label>
-                        <textarea id="message" name="message" class="form-control" rows="4" cols="50" required></textarea>
+                        <textarea id="message" name="message" class="form-control" rows="4" cols="50" required>ex : Je voudrais que mon site web qui ait un meilleur référencement.</textarea>
 					</div> 
 					<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit">
 						Envoyer
@@ -139,6 +139,7 @@
 
 <!-- Footer - bloc-8 -->
 <!-- SEO -- afin de répondre à la Check-list du point num 4 -- point de repère Aria pour la structure du site (FOOTER)-->
+
 <footer class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
 	<div class="container bloc-sm">
 		<div class="row">
@@ -155,7 +156,7 @@
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="facebook.com" alt="La chouette agence est aussi sur facebook!"><span class="fa fa-facebook icon-md" ></span></a>
+							<a class="social" href="facebook.com" alt="La chouette agence est aussi sur facebook!"><span class="fa fa-facebook icon-md"></span></a>
 						</div>
                         
 					</div>
