ajout site brut pour comparer

--- a/index.html
+++ b/index.html
@@ -272,26 +272,29 @@
 					La chouette agence - Agence web basée à Lyon.<br>
 				</h2>
 				<div class="row row-no-gutters social">
+<!-- SEO - afin de répondre à la Check-list du point num 4 - les liens ne renvoie plus vers la page d'accueil, mais vers des sites pertinents pour éviter le spam googlebot avec ajout d'alt comprenant un synonyme keyword -->
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
+							<a class="social" href="twitter.com" ><span class="fa fa-twitter icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
+							<a class="social" href="facebook.com"><span class="fa fa-facebook icon-md"></span></a>
+						</div>
+                        
+					</div>
+					<div class="col-sm-3">
+						<div class="text-center">
+							<a class="social" href="dribble.com"><span class="fa fa-dribbble icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
+							<a class="social" href="instagram.com"><span class="fa fa-instagram icon-md"></span></a>
 						</div>
 					</div>
-					<div class="col-sm-3">
-						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
-						</div>
-					</div>
+				
 <!-- SEO - Div spam supprimée -->
 				</div>
 				<div class="row">
