--- a/parlons-web-design.html
+++ b/parlons-web-design.html
@@ -46,11 +46,11 @@
 			<div class="navbar-header">
 <!-- SEO - afin de répondre à la Check-list du point num 4 - Modification du alt avec keyword dedans -->
 				<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png" alt="La chouette agence est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet" height="40" /></a>
-<!-- SEO - boutton non utilisé 
-                    <button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
-					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span> <span class="icon-bar"></span><span class="icon-bar"></span>
+
+                <button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
+				<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span> <span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
--->
+
 			</div>
 			<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 				<ul class="site-navigation nav navbar-nav">
@@ -70,6 +70,7 @@
 </header>
 <!-- bloc-0 END -->
 
+<main>
 <!-- bloc-6 -->
 <!-- SEO - afin de répondre à la Check-list du point num 4 - point de repère Aria pour la structure du site (SECTION)-->
 <section class="bloc bg-dots-bg bg-repeat bgc-atomic-tangerine d-bloc bloc-bg-texture texture-paper" id="bloc-6">
@@ -124,13 +125,11 @@
 							Brief de votre projet (Ajoutez autant de détails que nécessaire)<br>
 						</label>
                         <textarea id="message" name="message" class="form-control" rows="4" cols="50" required>ex : Je souhaiterai que mon site web ait un meilleur référencement.</textarea>
-					</div> 
-                    
+					</div>                     
 					<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit">
 						Envoyer
 					</button>
 				</form>
-                
 			</div>
 			<div class="col-sm-6">
 				<p class="text-center">
@@ -145,7 +144,7 @@
 <!-- ScrollToTop Button -->
 <a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a>
 <!-- ScrollToTop Button END-->
-
+</main>
 
 <!-- Footer - bloc-8 -->
 <!-- SEO - afin de répondre à la Check-list du point num 4 - point de repère Aria pour la structure du site (FOOTER)-->
