--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
 				<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png" alt="La chouette agence est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet" height="40" /></a>
                 
 <!-- SEO - Div spam supprimée -->			
-<!-- SEO - afin de répondre à la Check-list du point num 4 - bouton supprimé car non utilisé
+
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
-					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
+				<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
--->
+
 			</div>
 			<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 				<ul class="site-navigation nav navbar-nav">
@@ -81,7 +81,7 @@
 	</div>
 </header>
 <!-- bloc-0 END -->
-
+<main>
 <!-- bloc-1-presentation -->
 <!-- SEO - afin de répondre à la Check-list du point num 4 - point de repère Aria pour la structure du site (SECTION)-->
 <section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax" id="bloc-1-hero">
@@ -90,8 +90,9 @@
 			<div class="col-sm-12">
 <!-- SEO - afin de répondre à la Check-list du point num 4 - Modification du alt avec keyword dedans -->
 				<img src="img/logo.png" class="center-block image-resize-mode" width="100" alt="La chouette agence, une agence web à Paris spécialisée dans la création de sites web" />
+<!-- SEO - afin de répondre à la Check-list du point num 4 - Erreur dans h1- suppression du "." -->
 				<h1 class="text-center hero-bloc-text tc-white ">
-					La chouette agence.
+					La chouette agence
 				</h1>
 				<div class="text-center">
 <!-- SEO - afin de répondre à la Check-list du point num 4 - changement de l'URL de la page2 en un mot clef meilleur pour le référencement -->
@@ -260,7 +261,8 @@
 	</div>
 </section>
 <!-- bloc-5-cta END -->
-
+</main>
+    
 <!-- Footer - bloc-8 -->
 <!-- SEO - afin de répondre à la Check-list du point num 4 - point de repère Aria pour la structure du site (FOOTER)-->
 <footer class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
