--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     
 <!-- bloc-0 -->
 <!-- SEO - afin de répondre à la Check-list du point num 4 - point de repère Aria pour la structure du site (HEADER)-->
-<header class="bloc bgc-white l-bloc " id="bloc-0">
+<header class="bloc bgc-white l-bloc " id="bloc-0" role="banner">
 	<div class="container bloc-sm">
 		<nav class="navbar row">
 			<div class="navbar-header">
@@ -81,10 +81,10 @@
 	</div>
 </header>
 <!-- bloc-0 END -->
-<main>
+
 <!-- bloc-1-presentation -->
 <!-- SEO - afin de répondre à la Check-list du point num 4 - point de repère Aria pour la structure du site (SECTION)-->
-<section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax" id="bloc-1-hero">
+<section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax" id="bloc-1-hero" role="main">
 	<div class="container bloc-lg">
 		<div class="row tight-width-whitespace">
 			<div class="col-sm-12">
@@ -106,7 +106,7 @@
 
 <!-- bloc-2-services -->
 <!-- SEO - afin de répondre à la Check-list du point num 4 - point de repère Aria pour la structure du site (ARTICLE)-->
-<article class="bloc bgc-white l-bloc" id="bloc-2-services">
+<article class="bloc bgc-white l-bloc" id="bloc-2-services" role="article">
 	<div class="container bloc-md">
 		<div class="row">
 			<div class="col-sm-12 text-center">
@@ -164,7 +164,7 @@
 
 <!-- bloc-3-what-i-do -->
 <!-- SEO - afin de répondre à la Check-list du point num 4 - point de repère Aria pour la structure du site (SECTION)-->
-<section class="bloc tc-white bgc-atomic-tangerine bg-presentation d-bloc bloc-bg-texture texture-paper b-parallax" id="bloc-3-what-i-do">
+<section class="bloc tc-white bgc-atomic-tangerine bg-presentation d-bloc bloc-bg-texture texture-paper b-parallax" id="bloc-3-what-i-do" role="main">
 	<div class="container bloc-lg">
 		<div class="row tight-width-whitespace black-background">
 			<div class="col-sm-12">
@@ -184,7 +184,7 @@
 
 <!-- bloc-4-portfolio -->
 <!-- SEO - afin de répondre à la Check-list du point num 4 - point de repère Aria pour la structure du site (ASIDE)-->
-<aside class="bloc bgc-white bg-lines-h2-bg bg-repeat l-bloc" id="bloc-4-portfolio">
+<aside class="bloc bgc-white bg-lines-h2-bg bg-repeat l-bloc" id="bloc-4-portfolio" role="aside">
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-12 text-center">
@@ -246,7 +246,7 @@
 
 <!-- bloc-5-cta -->
 <!-- SEO - afin de répondre à la Check-list du point num 4 - point de repère Aria pour la structure du site (SECTION)-->
-<section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
+<section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta" role="main">
 	<div class="container bloc-lg">
 		<div class="row">
 			<h2 class="mg-md text-center tc-white">
@@ -261,11 +261,10 @@
 	</div>
 </section>
 <!-- bloc-5-cta END -->
-</main>
-    
+
 <!-- Footer - bloc-8 -->
 <!-- SEO - afin de répondre à la Check-list du point num 4 - point de repère Aria pour la structure du site (FOOTER)-->
-<footer class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
+<footer class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8" role="contentinfo">
 	<div class="container bloc-sm">
 		<div class="row">
 			<div class="col-sm-12">
