--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
 <!-- bloc-2-services -->
 <!-- SEO - afin de répondre à la Check-list du point num 4 - point de repère Aria pour la structure du site (ARTICLE)-->
-<article class="bloc bgc-white l-bloc" id="bloc-2-services" role="article">
+<article class="bloc bgc-white l-bloc" id="bloc-2-services" role="main">
 	<div class="container bloc-md">
 		<div class="row">
 			<div class="col-sm-12 text-center">
