--- a/index.html
+++ b/index.html
@@ -82,9 +82,10 @@
 </header>
 <!-- bloc-0 END -->
 
+<main role="main">
 <!-- bloc-1-presentation -->
 <!-- SEO - afin de répondre à la Check-list du point num 4 - point de repère Aria pour la structure du site (SECTION)-->
-<section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax" id="bloc-1-hero" role="main">
+<section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax" id="bloc-1-hero" >
 	<div class="container bloc-lg">
 		<div class="row tight-width-whitespace">
 			<div class="col-sm-12">
@@ -106,7 +107,7 @@
 
 <!-- bloc-2-services -->
 <!-- SEO - afin de répondre à la Check-list du point num 4 - point de repère Aria pour la structure du site (ARTICLE)-->
-<article class="bloc bgc-white l-bloc" id="bloc-2-services" role="main">
+<article class="bloc bgc-white l-bloc" id="bloc-2-services" >
 	<div class="container bloc-md">
 		<div class="row">
 			<div class="col-sm-12 text-center">
@@ -184,7 +185,7 @@
 
 <!-- bloc-4-portfolio -->
 <!-- SEO - afin de répondre à la Check-list du point num 4 - point de repère Aria pour la structure du site (ASIDE)-->
-<aside class="bloc bgc-white bg-lines-h2-bg bg-repeat l-bloc" id="bloc-4-portfolio" role="main">
+<aside class="bloc bgc-white bg-lines-h2-bg bg-repeat l-bloc" id="bloc-4-portfolio" >
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-12 text-center">
@@ -246,7 +247,7 @@
 
 <!-- bloc-5-cta -->
 <!-- SEO - afin de répondre à la Check-list du point num 4 - point de repère Aria pour la structure du site (SECTION)-->
-<section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta" role="main">
+<section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta" >
 	<div class="container bloc-lg">
 		<div class="row">
 			<h2 class="mg-md text-center tc-white">
@@ -261,7 +262,8 @@
 	</div>
 </section>
 <!-- bloc-5-cta END -->
-
+</main>
+    
 <!-- Footer - bloc-8 -->
 <!-- SEO - afin de répondre à la Check-list du point num 4 - point de repère Aria pour la structure du site (FOOTER)-->
 <footer class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8" role="contentinfo">
