--- a/parlons-web-design.html
+++ b/parlons-web-design.html
@@ -12,7 +12,7 @@
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
 <!-- j'ai remarqué des incohérences (".min") dans les liens que j'ai corrigé -->
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
-	<link rel="stylesheet" type="text/css" href="style-compressed.css">
+	<link rel="stylesheet" type="text/css" href="./css/style-compressed.css">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 	
