--- a/parlons-web-design.html
+++ b/parlons-web-design.html
@@ -9,7 +9,7 @@
 <!-- SEO - maj description -->
     <meta name="description" content="La chouette agenge redonne vie à votre projet, contactez-nous !">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-    <link rel="shortcut icon" type="image/png" href="favicon.jpg">
+    <link rel="shortcut icon" type="image/png" href="./img/favicon.png">
 <!-- j'ai remarqué des incohérences (".min") dans les liens que j'ai corrigé -->
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="./css/style-compressed.css">
