--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <!-- SEO - <meta name="keywords"> supprimée -->
     
 <!-- SEO - Changement de la description-->
-    <meta name="description" content="La chouette agence est une agence de web design qui aide les entreprises à devenir attractives et visibles sur internet">
+    <meta name="description" content="La chouette agence est une agence de web design">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="./img/favicon.png">
     
