--- a/index.html
+++ b/index.html
@@ -275,11 +275,11 @@
 					La chouette agence - Agence web basée à Lyon.<br>
 				</h2>
 				<div class="row row-no-gutters social">
-<!-- SEO - afin de répondre à la Check-list du point num 4 - les liens ne renvoie plus vers la page d'accueil, mais vers des sites pertinents pour éviter le spam googlebot avec ajout d'alt comprenant un synonyme keyword -->
+<!-- SEO - afin de répondre à la Check-list du point num 4 - les liens ne renvoie plus vers la page d'accueil, mais vers des sites pertinents pour éviter le spam googlebot avec ajout d'alt comprenant un synonyme keyword. -->
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="twitter.com" ><span class="fa fa-twitter icon-md"></span></a>
-						</div>
+                            <a class="social" href="twitter.com" ><span class="fa fa-twitter icon-md"></span></a>
+                        </div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
