--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <!-- SEO - Div spam supprimée -->
                 
 <!-- SEO - afin de répondre à la Check-list du point num 4 - Modification du alt avec keyword dedans -->
-				<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.jpg" alt="La chouette agence est une agence de web design" height="40" /></a>
+				<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png" alt="La chouette agence est une agence de web design" height="40" /></a>
                 
 <!-- SEO - Div spam supprimée -->			
 
