pour utiliser wave

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 		<div class="row tight-width-whitespace">
 			<div class="col-sm-12">
 <!-- SEO - afin de répondre à la Check-list du point num 4 - Modification du alt avec keyword dedans -->
-				<img src="img/logo.png" class="center-block image-resize-mode" width="100" alt="La chouette agence, une agence web à Paris spécialisée dans la création de sites web" />
+				<img src="img/logo.png" class="center-block image-resize-mode" width="100" alt="La chouette agence, une agence web à Lyon spécialisée dans la création de sites web" />
 <!-- SEO - afin de répondre à la Check-list du point num 4 - Erreur dans h1- suppression du "." -->
 				<h1 class="text-center hero-bloc-text tc-white ">
 					La chouette agence
@@ -170,7 +170,7 @@
 		<div class="row tight-width-whitespace black-background">
 			<div class="col-sm-12">
 				<h2 class="mg-md text-center tc-white">
-					Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients .<br>
+					Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients.<br>
 				</h2>
 				<p class="text-center white">
 					Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche. <br><br>
@@ -195,7 +195,7 @@
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
 			<div class="col-sm-6">
-<!-- SEO - Image réduite en 570x570px pour le site dans <img> et normale pour les visionner dans <a> -->
+<!-- SEO - Image réduite en 270x270px pour le site dans <img> et normale pour les visionner dans <a> -->
 <!-- SEO - afin de répondre à la Check-list du point num 4 - Modification du alt avec keyword dedans -->
                 <a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/mini1.jpg" alt="Notre agence est la meilleure pour la refonte de site web d'un journal" class="img-responsive portfolio-thumb" /></a>
 				<h3 class="mg-md text-center">
@@ -206,7 +206,7 @@
 				</p>
 			</div>
 			<div class="col-sm-6">
-<!-- SEO - Image réduite en 570x570px pour le site dans <img> et normale pour les visionner dans <a> -->
+<!-- SEO - Image réduite en 270x270px pour le site dans <img> et normale pour les visionner dans <a> -->
 <!-- SEO - afin de répondre à la Check-list du point num 4 - Modification du alt avec keyword dedans -->
 				<a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/mini2.jpg" class="img-responsive portfolio-thumb" alt="La chouette agence a eu de nombreuses demandes dans la création d'un site web pour photographes" /></a>
 				<h3 class="mg-md text-center">
@@ -219,7 +219,7 @@
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
 			<div class="col-sm-6">
-<!-- SEO - Image covertie en jpeg, puis réduite en 570x570px pour le site dans <img> et normale pour les visionner dans <a> -->
+<!-- SEO - Image covertie en jpeg, puis réduite en 270x270px pour le site dans <img> et normale pour les visionner dans <a> -->
 <!-- SEO - afin de répondre à la Check-list du point num 4 - Modification du alt avec keyword dedans -->
 				<a href="#" data-lightbox="img/3.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/mini3.jpg" class="img-responsive portfolio-thumb" alt="Nous nous spécialisons aussi dans la création des sites web pour voyageur"/></a>
 				<h3 class="mg-md text-center">
@@ -230,7 +230,7 @@
 				</p>
 			</div>
 			<div class="col-sm-6">
-<!-- SEO - Image covertie en jpeg, puis réduite en 570x570px pour le site dans <img> et normale pour les visionner dans <a> -->
+<!-- SEO - Image covertie en jpeg, puis réduite en 270x270px pour le site dans <img> et normale pour les visionner dans <a> -->
 <!-- SEO - afin de répondre à la Check-list du point num 4 - Modification du alt avec keyword dedans -->
 				<a href="#" data-lightbox="img/4.jpg" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/mini4.jpg" class="img-responsive portfolio-thumb" alt="Nous travaillons aussi dans la création d'un site web pour les agences de mariage" /></a>
 				<h3 class="mg-md text-center">
@@ -263,7 +263,7 @@
 </section>
 <!-- bloc-5-cta END -->
 
-    
+
 <!-- Footer - bloc-8 -->
 <!-- SEO - afin de répondre à la Check-list du point num 4 - point de repère Aria pour la structure du site (FOOTER)-->
 <footer class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8" role="contentinfo">
@@ -300,11 +300,11 @@
 				
 <!-- SEO - Div spam supprimée -->
 				</div>
-				<div class="row">
+<!-- SEO - Div partenaires supprimée car ce n'est plus d'actualité de les mettre dans le footer, ça n'aura pas un impact sur le SEO il vaut mieux les place dans les pages autres que index à des endroits pertinents 
+                <div class="row">
 					<div class="col-sm-4">
 						Partenaires
-							<ul>
- <!-- SEO - Ajout de class="tc-white" aux liens pour que le contraste soit bon -->                               
+							<ul>                              
 								<li><a href="voiture.com" class="tc-white">voiture.com</a></li>
 								<li><a href="pizza.com" class="tc-white">pizza.com</a></li>
 								<li><a href="matoiture.com" class="tc-white">matoiture.com</a></li>
@@ -340,6 +340,7 @@
 						</ul>
 					</div>
 				</div>
+-->
 			</div>
 		</div>
 	</div>
